--- a/Dashboard/Areas/SeasonEntity/Views/Season/Profile.cshtml
+++ b/Dashboard/Areas/SeasonEntity/Views/Season/Profile.cshtml
@@ -33,7 +33,7 @@
                     <div class="col-12">
                         <div class="card profile-header mb-2">
                             <!-- profile cover photo -->
-                            <img class="card-img-top" height="400" src="~/coverImg.jpg" alt="cover">
+                            <img class="card-img-top" height="200" src="~/coverImg.png" alt="cover">
                             <!--/ profile cover photo -->
                             <div class="position-relative">
                                 <!-- profile picture -->
