--- a/Dashboard/Areas/AppInfoEntity/Views/AppAbout/CreateOrEdit.cshtml
+++ b/Dashboard/Areas/AppInfoEntity/Views/AppAbout/CreateOrEdit.cshtml
@@ -230,6 +230,14 @@
 
                                         <div class="col-md-4 col-12">
                                             <div class="mb-1">
+                                                <label asp-for="YoutubeUrl" class="form-label"></label>
+                                                <input asp-for="YoutubeUrl" class="form-control" placeholder="@Localizer.Get("Enter") @(Localizer.Get("YoutubeUrl"))" />
+                                                <span asp-validation-for="YoutubeUrl" class="text-danger"></span>
+                                            </div>
+                                        </div>
+
+                                        <div class="col-md-4 col-12">
+                                            <div class="mb-1">
                                                 <label asp-for="ShowPayment" class="form-label"></label>
                                                 <select asp-for="ShowPayment" class="select2 form-select">
                                                     <option value="true">@Localizer.Get("Yes")</option>
@@ -238,6 +246,7 @@
                                                 <span asp-validation-for="ShowPayment" class="text-danger"></span>
                                             </div>
                                         </div>
+
 
                                         <div class="col-md-4 col-12">
                                             <div class="mb-1">
