--- a/Dashboard/Areas/Dashboard/Views/Home/_HomeModals.cshtml
+++ b/Dashboard/Areas/Dashboard/Views/Home/_HomeModals.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Mvc.TagHelpers
 @using Entities.CoreServicesModels.SeasonModels
 @{
-    GameWeakModel current = (GameWeakModel)ViewData["CurrentGameWeak"];
+    int current = (int)ViewData["CurrentGameWeak"];
 }
 
 <div class="modal fade text-start text-center update_game_result_modal" tabindex="-1" aria-hidden="true">
@@ -23,19 +23,19 @@
                                     <select name="Fk_GameWeak" class="select2 form-select">
                                         @foreach (KeyValuePair<string, string> gameWeak in (Dictionary<string, string>)ViewData["GameWeak"])
                                         {
-                                            <option selected="@(current!=null&& current.Id.ToString() == gameWeak.Key)" value="@gameWeak.Key">@gameWeak.Value</option>
+                                            <option selected="@(current > 0 && current.ToString() == gameWeak.Key)" value="@gameWeak.Key">@gameWeak.Value</option>
                                         }
                                     </select>
                                 </div>
                             </div>
-                        
+
                             <div class="col-md-12 col-12">
                                 <div class="mb-1">
                                     <label class="form-label">@Localizer.Get("_365_MatchId")</label>
                                     <input name="_365_MatchId" class="form-control" />
                                 </div>
                             </div>
-                        
+
                             <div class="col-md-12 col-12">
                                 <div class="mb-1">
                                     <label class="form-label">@Localizer.Get("RunBonus")</label>
@@ -79,7 +79,7 @@
                                     <select name="Fk_GameWeak" class="select2 form-select">
                                         @foreach (KeyValuePair<string, string> gameWeak in (Dictionary<string, string>)ViewData["GameWeak"])
                                         {
-                                            <option selected="@(current.Id.ToString() == gameWeak.Key)" value="@gameWeak.Key">@gameWeak.Value</option>
+                                            <option selected="@(current > 0 && current.ToString() == gameWeak.Key)" value="@gameWeak.Key">@gameWeak.Value</option>
                                         }
                                     </select>
                                 </div>
@@ -113,13 +113,6 @@
                         <div class="row mb-1">
                             <div class="col-md-12 col-12">
                                 <div class="mb-1">
-                                    @*<label class="form-label">@Localizer.Get("GameWeak")</label>*@
-                                    @*<select name="Fk_GameWeak" class="select2 form-select">
-                                        @foreach (KeyValuePair<string, string> gameWeak in (Dictionary<string, string>)ViewData["GameWeak"])
-                                        {
-                                            <option selected="@(current.Id.ToString() == gameWeak.Key)" value="@gameWeak.Key">@gameWeak.Value</option>
-                                        }
-                                    </select>*@
                                 </div>
                             </div>
                         </div>
@@ -155,7 +148,7 @@
                                     <select name="Fk_GameWeak" class="select2 form-select">
                                         @foreach (KeyValuePair<string, string> gameWeak in (Dictionary<string, string>)ViewData["GameWeak"])
                                         {
-                                            <option selected="@(current.Id.ToString() == gameWeak.Key)" value="@gameWeak.Key">@gameWeak.Value</option>
+                                            <option selected="@(current > 0 && current.ToString() == gameWeak.Key)" value="@gameWeak.Key">@gameWeak.Value</option>
                                         }
                                     </select>
                                 </div>
