--- a/Dashboard/Areas/SeasonEntity/Views/TeamGameWeak/CreateOrEdit.cshtml
+++ b/Dashboard/Areas/SeasonEntity/Views/TeamGameWeak/CreateOrEdit.cshtml
@@ -134,6 +134,14 @@
                                             </div>
                                         </div>
 
+                                        <div class="col-md-4 col-12">
+                                            <div class="mb-1">
+                                                <label asp-for="IsActive" class="form-check-label" for="IsActive"></label>
+                                                <input asp-for="IsActive" class="form-check-input" />
+                                                <span asp-validation-for="IsActive" class="text-danger"></span>
+                                            </div>
+                                        </div>
+
                                     </div>
 
                                     <hr />
