--- a/Dashboard/Views/Shared/_menu.cshtml
+++ b/Dashboard/Views/Shared/_menu.cshtml
@@ -202,6 +202,14 @@
                                 </a>
                             </li>
                         }
+                        @if (viewList.Contains((int)DashboardViewEnum.MatchStatisticScore))
+                        {
+                            <li id="MatchStatisticScoreList" class="@(active == DashboardViewEnum.MatchStatisticScore.ToString()?"active":"")">
+                                <a class="d-flex align-items-center" asp-controller="MatchStatisticScore" asp-area="MatchStatisticEntity" asp-action="Index">
+                                    <i data-feather='dribbble'></i><span class="menu-item text-truncate" data-i18n="Second Level">@Localizer.Get("MatchStatisticScores")</span>
+                                </a>
+                            </li>
+                        }
                     </ul>
                 </li>
             }
@@ -243,6 +251,19 @@
                         <i data-feather="dollar-sign"></i>
                         <span class="menu-title text-truncate">
                             @Localizer.Get("Subscriptions")
+                        </span>
+                    </a>
+                </li>
+            }
+               @if (viewList.Contains((int)DashboardViewEnum.PromoCode))
+            {
+                <li id="PromoCodeList" class="@(active == DashboardViewEnum.PromoCode.ToString()?"active":"") nav-item">
+                    <a class="d-flex align-items-center"
+                   asp-action="Index" asp-area="PromoCodeEntity"
+                   asp-controller="PromoCode">
+                        <i data-feather='check-circle'></i>
+                        <span class="menu-title text-truncate">
+                            @Localizer.Get("PromoCodes")
                         </span>
                     </a>
                 </li>
@@ -385,6 +406,34 @@
                     </ul>
                 </li>
             }
+            @if (viewList.Contains((int)DashboardViewEnum.StatisticCategory)
+            || viewList.Contains((int)DashboardViewEnum.StatisticScore))
+            {
+                <li class=" nav-item">
+                    <a class="d-flex align-items-center" href="#">
+                        <i data-feather='flag'></i><span class="menu-title text-truncate" data-i18n="Menu Levels">@Localizer.Get("MatchStatistics Data")</span>
+                    </a>
+                    <ul class="menu-content">
+                        @if (viewList.Contains((int)DashboardViewEnum.StatisticCategory))
+                        {
+                            <li class="@(active == DashboardViewEnum.StatisticCategory.ToString()?"active":"")">
+                                <a class="d-flex align-items-center" asp-controller="StatisticCategory" asp-area="MatchStatisticEntity" asp-action="Index">
+                                    <i data-feather='settings'></i><span class="menu-item text-truncate" data-i18n="Second Level">@Localizer.Get("StatisticCategorys")</span>
+                                </a>
+                            </li>
+                        }
+                        @if (viewList.Contains((int)DashboardViewEnum.StatisticScore))
+                        {
+                            <li class="@(active == DashboardViewEnum.StatisticScore.ToString()?"active":"")">
+                                <a class="d-flex align-items-center" asp-controller="StatisticScore" asp-area="MatchStatisticEntity" asp-action="Index">
+                                    <i data-feather='settings'></i><span class="menu-item text-truncate" data-i18n="Second Level">@Localizer.Get("StatisticScores")</span>
+                                </a>
+                            </li>
+                        }
+                    </ul>
+                </li>
+            }
+
 
             @if (viewList.Contains((int)DashboardViewEnum.Country))
             {
