--- a/Dashboard/Areas/MatchStatisticEntity/Views/MatchStatisticScore/Filter.cshtml
+++ b/Dashboard/Areas/MatchStatisticEntity/Views/MatchStatisticScore/Filter.cshtml
@@ -63,7 +63,7 @@
                 <div class="col-md-6 col-12">
                     <div class="mb-1">
                         <label asp-for="IsCanNotEdit" class="form-label"></label>
-                        <select asp-for="IsCanNotEdit" class="select2 form-select">
+                        <select asp-for="IsCanNotEdit" class=" form-select">
                             <option value="" selected>@Localizer.Get("All")</option>
                             <option value="true">@Localizer.Get("Yes")</option>
                             <option value="false">@Localizer.Get("No")</option>
