--- a/Dashboard/Areas/PromoCodeEntity/Views/PromoCode/Details.cshtml
+++ b/Dashboard/Areas/PromoCodeEntity/Views/PromoCode/Details.cshtml
@@ -80,7 +80,7 @@
             {
                 @foreach (var item in Model.Subscriptions)
                 {
-                    <span class="badge bg-success">@item.Name</span>
+                    <span class="badge bg-primary">@item.Name</span>
                 }
             }
             else
