--- a/Dashboard/Areas/MatchStatisticEntity/Views/MatchStatisticScore/Details.cshtml
+++ b/Dashboard/Areas/MatchStatisticEntity/Views/MatchStatisticScore/Details.cshtml
@@ -15,8 +15,8 @@
                 <dl class="row mb-0">
     
                 
-                    <dt class="col-sm-4 fw-bolder mb-1">@Html.DisplayNameFor(model => model.TeamGameWeak.Home):</dt>
-                    <dd class="col-sm-8 mb-1">@Model.TeamGameWeak.Home.Name</dd>
+                    <dt class="col-sm-4 fw-bolder mb-1">@Html.DisplayNameFor(model => model.Team):</dt>
+                    <dd class="col-sm-8 mb-1">@Model.Team.Name</dd>
     
                     <dt class="col-sm-4 fw-bolder mb-1">@Html.DisplayNameFor(model => model.TeamGameWeak.GameWeak.Season):</dt>
                     <dd class="col-sm-8 mb-1">@Model.TeamGameWeak.GameWeak.Season.Name</dd>
@@ -36,12 +36,8 @@
             </div>
             <div class="col-xl-5 col-12">
                 <dl class="row mb-0">
-    
-                
-                    <dt class="col-sm-4 fw-bolder mb-1">@Html.DisplayNameFor(model => model.TeamGameWeak.Away):</dt>
-                    <dd class="col-sm-8 mb-1">@Model.TeamGameWeak.Away.Name</dd>
-    
-                 <dt class="col-sm-4 fw-bolder mb-1">@Html.DisplayNameFor(model => model.TeamGameWeak.GameWeak):</dt>
+
+                    <dt class="col-sm-4 fw-bolder mb-1">@Html.DisplayNameFor(model => model.TeamGameWeak.GameWeak):</dt>
                     <dd class="col-sm-8 mb-1">@Model.TeamGameWeak.GameWeak.Name</dd>
     
     
