--- a/Dashboard/Areas/PlayerMarkEntity/Views/PlayerMark/CreateOrEdit.cshtml
+++ b/Dashboard/Areas/PlayerMarkEntity/Views/PlayerMark/CreateOrEdit.cshtml
@@ -56,15 +56,7 @@
                                             </div>
                                         </div>
 
-                                        <div class="col-md-4 col-12">
-                                            <div class="mb-1">
-                                                <label asp-for="Value" class="form-label"></label>
-                                                <input asp-for="Value" class="form-control" placeholder="@Localizer.Get("Enter") @(Localizer.Get($"Value"))" />
-                                                <span asp-validation-for="Value" class="text-danger"></span>
-                                            </div>
-                                        </div>
-                                        
-                                        <div class="col-md-4 col-12">
+                                        <div class="col-md-6 col-12">
                                             <div class="mb-1">
                                                 <label asp-for="Count" class="form-label"></label>
                                                 <input asp-for="Count" class="form-control" placeholder="@Localizer.Get("Enter") @(Localizer.Get($"Count"))" />
@@ -72,20 +64,26 @@
                                             </div>
                                         </div>
 
-                                        <div class="col-md-4 col-12">
+                                        <div class="col-md-6 col-12">
                                             <div class="mb-1">
                                                 <label asp-for="Used" class="form-label"></label>
                                                 <input asp-for="Used" class="form-control" placeholder="@Localizer.Get("Enter") @(Localizer.Get($"Used"))" />
                                                 <span asp-validation-for="Used" class="text-danger"></span>
                                             </div>
                                         </div>
-                                        
+
                                         <div class="col-md-12 col-12">
                                             <div class="mb-1">
-                                                <label asp-for="Fk_GameWeaks" class="form-label"></label>
-                                                <select asp-for="Fk_GameWeaks" class="select2 form-select" multiple asp-items="@(new SelectList(ViewData["GameWeaks"] as Dictionary<string,string>,"Key","Value"))">
+                                                <label asp-for="Fk_PlayerMarkReasonMatches" class="form-label"></label>
+                                                <select asp-for="Fk_PlayerMarkReasonMatches" class="select2 form-select" multiple>
+                                                    @foreach (TeamGameWeakModel teamGameWeak in (List<TeamGameWeakModel>)ViewData["TeamGameWeaks"])
+                                                    {
+                                                        <option value="@teamGameWeak.Id">
+                                                            @( $" ( {teamGameWeak.GameWeak.Name} ) " + teamGameWeak.Home.Name + " x " + teamGameWeak.Away.Name)
+                                                        </option>
+                                                    }
                                                 </select>
-                                                <span asp-validation-for="Fk_GameWeaks" class="text-danger"></span>
+                                                <span asp-validation-for="Fk_PlayerMarkReasonMatches" class="text-danger"></span>
                                             </div>
                                         </div>
                                         
