--- a/Dashboard/Areas/SeasonEntity/Views/TeamGameWeak/Profile.cshtml
+++ b/Dashboard/Areas/SeasonEntity/Views/TeamGameWeak/Profile.cshtml
@@ -19,7 +19,7 @@
     }
 
     ViewData["_365_MatchId"] = Model._365_MatchId;
-    
+
     int dashboardRole = ((UserAuthenticatedDto)ViewData["auth"]).Fk_DashboardAdministrationRole;
 }
 
@@ -121,63 +121,63 @@
                         <div class="card-body" style="overflow-x: auto">
                             @* @if (dashboardRole == (int)DashboardAdministrationRoleEnum.Developer) *@
                             @* { *@
-                                <a class="btn btn-primary update_game_result">@Localizer.Get("UpdateGameResult")</a>
+                            <a class="btn btn-primary update_game_result">@Localizer.Get("UpdateGameResult")</a>
                             <a class="btn btn-info update_teams_players">@Localizer.Get("UpdateTeamsPlayers")</a>
-                            <a href="/MatchStatisticEntity/MatchStatisticScore/Index/?Fk_TeamGameWeak=@Model.Id" target="_blank" class="btn btn-info">@Localizer.Get("MatchStatisticScore")</a>
-                                <hr>
+                            <a href="/MatchStatisticEntity/MatchStatisticScore/Index/?Fk_TeamGameWeak=@Model.Id" target="_blank" class="btn btn-warning">@Localizer.Get("MatchStatisticScore")</a>
+                            <hr>
                             @* } *@
                             <div class="d-flex justify-content-between align-items-start">
                                 <span class="badge bg-light-primary">@Html.DisplayNameFor(model => Model.HomeTeamPlayers)</span>
                             </div>
-                            <br/>
+                            <br />
 
                             @if (Model.HomeTeamPlayers != null && Model.HomeTeamPlayers.Any())
                             {
                                 <table class="table">
                                     <thead>
-                                    <tr>
-                                        <th>@Localizer.Get("Name")</th>
-                                        <th>@Localizer.Get("Ranking")</th>
-                                        <th>@Localizer.Get("IsCantEdit")</th>
-                                        <th>@Localizer.Get("PlayerGameWeakScore")</th>
-                                        <th>@Localizer.Get("Statistics")</th>
-                                        <th>@Localizer.Get("PlayerGameWeakScoreState")</th>
-                                    </tr>
+                                        <tr>
+                                            <th>@Localizer.Get("Name")</th>
+                                            <th>@Localizer.Get("Ranking")</th>
+                                            <th>@Localizer.Get("IsCantEdit")</th>
+                                            <th>@Localizer.Get("PlayerGameWeakScore")</th>
+                                            <th>@Localizer.Get("Statistics")</th>
+                                            <th>@Localizer.Get("PlayerGameWeakScoreState")</th>
+                                        </tr>
                                     </thead>
                                     <tbody>
-                                    @foreach (var item in Model.HomeTeamPlayers)
-                                    {
-                                        <tr>
-                                            <td>
-                                                <a href="/TeamEntity/Player/Profile?id=@item.Player.Id" target="_blank">
-                                                    @item.Player.Name
-                                                </a>
-                                            </td>
-                                            <td>
-                                                <input type="text" class="form-control player_ranking_input" data-fk_playergameweak="@item.Id" value="@item.Ranking" />
-                                            </td>
-                                            <td>
-                                                <span class="badge bg-@(!item.IsCanNotEdit ? "success" : "danger")">
-                                                    @Localizer.Get((!item.IsCanNotEdit ? "Yes" : "No"))
-                                                </span>
-                                            </td>
-                                            <td>
-                                                <a class="modalbtn" href="/SeasonEntity/TeamGameWeak/ScoreDetails?fk_Player=@item.Player.Id&fk_TeamGameWeak=@Model.Id">
-                                                    @Localizer.Get("Click to View")
-                                                </a>
-                                            </td>
-                                            <td>
-                                                <a class="modalbtn" href="/SeasonEntity/TeamGameWeak/AddScore?fk_Team=@Model.Fk_Home&fk_PlayerGameWeak=@item.Id">
-                                                    @Localizer.Get("Add statistics")
-                                                </a>
-                                            </td>
-                                            <td>
-                                                <a class="modalbtn" href="/SeasonEntity/TeamGameWeak/ScoreStateDetails?fk_Player=@item.Player.Id&fk_GameWeak=@Model.Fk_GameWeak">
-                                                    @Localizer.Get("Click to View")
-                                                </a>
-                                            </td>
-                                        </tr>
-                                    }
+                                        @foreach (var item in Model.HomeTeamPlayers)
+                                        {
+                                            <tr>
+                                                <td>
+                                                    <a href="/TeamEntity/Player/Profile?id=@item.Player.Id" target="_blank">
+                                                        @item.Player.Name
+                                                    </a>
+                                                </td>
+                                                <td>
+                                                    <input type="text" class="form-control player_ranking_input" data-fk_playergameweak="@item.Id" value="@item.Ranking" />
+                                                </td>
+                                                <td>
+                                                    <span class="badge bg-@(!item.IsCanNotEdit ? "success" : "danger")">
+                                                        @Localizer.Get((!item.IsCanNotEdit ? "Yes" : "No"))
+                                                    </span>
+                                                </td>
+                                                <td>
+                                                    <a class="modalbtn" href="/SeasonEntity/TeamGameWeak/ScoreDetails?fk_Player=@item.Player.Id&fk_TeamGameWeak=@Model.Id">
+                                                        @Localizer.Get("Click to View")
+                                                    </a>
+                                                </td>
+                                                <td>
+                                                    <a class="modalbtn" href="/SeasonEntity/TeamGameWeak/AddScore?fk_Team=@Model.Fk_Home&fk_PlayerGameWeak=@item.Id">
+                                                        @Localizer.Get("Add statistics")
+                                                    </a>
+                                                </td>
+                                                <td>
+                                                    <a class="modalbtn" href="/SeasonEntity/TeamGameWeak/ScoreStateDetails?fk_Player=@item.Player.Id&fk_GameWeak=@Model.Fk_GameWeak">
+                                                        @Localizer.Get("Click to View")
+                                                    </a>
+                                                </td>
+                                            </tr>
+                                        }
                                     </tbody>
                                 </table>
                             }
@@ -283,7 +283,7 @@
     </div>
 </div>
 
-<partial name="_TeamGameWeakModals" view-data="ViewData"  />
+<partial name="_TeamGameWeakModals" view-data="ViewData" />
 
 @section scripts{
     <script>
@@ -314,18 +314,18 @@
             $('.form-content').load(href);
             $("#Modal").modal("show");
         });
-        
+
         // start update_game_result
         $(document).on("click", ".update_game_result", function(e) {
           e.preventDefault();
-          
+
           $(".update_game_result_modal").modal('show');
         });
-        
+
         $(document).on("click", ".update_game_result_submit", function (e) {
             let _365_MatchId = $("input[name=_365_MatchId]").val();
             let runBonus = $("select[name=RunBonus]").val();
-            
+
             $.ajax({
                 url: '@Url.Action("UpdateGameResult", "Home", new {area = "Dashboard"})',
                 method: 'post',
@@ -337,17 +337,17 @@
                 success: function(data) {
                   $("#success").modal('show');
                 }
-            }); 
+            });
         });
         // end update_game_result
-        
+
         // start update_account_team_points
         $(document).on("click", ".update_account_team_points", function(e) {
           e.preventDefault();
-          
+
           $(".update_account_team_points_modal").modal('show');
         });
-        
+
         $(document).on("click", ".update_account_team_points_submit", function (e) {
             $.ajax({
                 url: '@Url.Action("UpdateAccountTeamPoints", "Home", new {area = "Dashboard"})',
@@ -358,12 +358,12 @@
                 success: function(data) {
                   $("#success").modal('show');
                 }
-            }); 
+            });
         });
         // end update_account_team_points
-        
+
         // start update_teams_players
-        $(document).on("click", ".update_teams_players", function (e) {  
+        $(document).on("click", ".update_teams_players", function (e) {
             $.ajax({
                 url: '@Url.Action("UpdateTeamsPlayers", "TeamGameWeak", new {area = "SeasonEntity"})',
                 method: 'post',
@@ -373,16 +373,16 @@
                 success: function(data) {
                   $("#success").modal('show');
                 }
-            }); 
+            });
         });
         // end update_teams_players
-        
-        
+
+
         // start edit player_ranking
         $(document).on("blur", ".player_ranking_input", function (e) {
             let fk_PlayerGameWeak = $(this).data("fk_playergameweak");
             let ranking = $(this).val();
-            
+
             $.ajax({
                 url: '@Url.Action("UpdatePlayerGameWeakRanking", "PlayerGameWeak", new {area = "PlayerScoreEntity"})',
                 method: 'post',
@@ -393,7 +393,7 @@
                 success: function(data) {
                   $("#success").modal('show');
                 }
-            }); 
+            });
         });
         // end edit player_ranking
     </script>
